Label Generator related changes
SVN-Revision: 24425